test/tests/stages/12_unsigned_integers/valid/extra_credit/compound_assign_uint.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  int
  identifier(x)
  =
  -
  const unsigned int(1u)
  ;
  identifier(x)
  /=
  -
  const long(10l)
  ;
  return
  (
  identifier(x)
  ==
  const unsigned int(3865470567u)
  )
  ;
  }
