test/tests/stages/12_unsigned_integers/invalid_types/conflicting_signed_unsigned.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  unsigned
  identifier(x)
  ;
  int
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
